HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestMissingPostcondition/Source/Main.uv
//! Rejected source-native test attribute specimen for a missing test postcondition.

#test
public procedure testMissingPostconditionReference() -> bool {
    return 1 == 1
}
